# Control-remoto-websocket

./: client.py  control.py  pyproject.toml
