[tool.poetry]
name = "seba-control-remoto"
version = "0.1.0"
description = ""
authors = ["Sebastian Orrego"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyautogui = "^0.9.54"
pysimplegui = "^4.60.5"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
